syntax = "proto2";

package main;

option java_package = "afip.rut.client.model";
option java_outer_classname = "PersonasProto";


message Personas{
    repeated Persona personas = 1;
} 

message Persona{
	required uint64 cuit = 1;
	optional string nombre = 2;
	optional string      apellido=3;
	optional string      razonSocial=4;
	required string      tipoPersona=5;
	required string      estadoCuit=6;
	optional int32       idFormaJuridica=7;
	optional int32       tipoDoc=8;
	optional string      documento=9;
	optional string      sexo=10;
	optional int32       mesCierre=11;
	optional string      fechaNacimiento=12;
	optional string      fechaFallecimiento=13;
	optional string      fechaInscripcion=14;
	optional string      fechaCierre=15;
	optional uint64      nuevaCuit=16;
	repeated Impuesto impuestos= 17;
}

message Impuesto {
	required int32  idImpuesto=1;
	optional int32  idOrg=2;
	optional string fechaInscripcion=3;
	optional int32  periodo=4;
	optional string estado=5;
	optional uint64 idTxc=6;
}
